--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "turbo run build",
     "clean": "turbo run clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "release": "turbo run build --filter=!@dimelords/docs && changeset publish",
+    "release": "turbo run build && changeset publish",
     "changeset": "changeset",
     "version-packages": "changeset version"
   },
