--- a/package.json
+++ b/package.json
@@ -22,8 +22,21 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.1",
+    "rollup-plugin-dts": "^6.1.0",
     "turbo": "^2.3.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup-plugin-postcss": "^4.0.2",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18"
+  },
+  "peerDependencies": {
+    "date-fns": "^3.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@dimelords/shared": "^0.2.0",
+    "lucide-react": "^0.358.0"
   },
   "packageManager": "pnpm@8.9.0"
 }
