--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.56.0",
@@ -22,21 +26,18 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.1",
-    "rollup-plugin-dts": "^6.1.0",
-    "turbo": "^2.3.3",
-    "typescript": "^5.3.3",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup": "^4.32.0",
+    "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18"
+    "turbo": "^2.3.3",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "date-fns": "^3.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@dimelords/shared": "^0.2.0",
-    "lucide-react": "^0.358.0"
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.358.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "packageManager": "pnpm@8.9.0"
 }
