--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -33,7 +34,7 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "@dimelords/shared": "^0.2.1",
+    "@dimelords/shared": "^0.3.5",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.358.0",
     "react": "^18.2.0",
