--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "packageManager": "pnpm@8.9.0"
+  "packageManager": "pnpm@8.9.0",
+  "dependencies": {
+    "@module-federation/rollup-federation": "^0.0.1"
+  }
 }
