--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   },
   "packageManager": "pnpm@8.9.0",
   "dependencies": {
-    "@module-federation/rollup-federation": "^0.0.1"
+    "@babel/preset-react": "^7.26.3",
+    "@module-federation/rollup-federation": "^0.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@turbo/codemod": "^2.3.4"
   }
 }
